--- a/index.html
+++ b/index.html
@@ -6,21 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <title>Prezentacja - Procesor</title>
 </head>
 <body>
     <div class="container">
         <div class="slider-page">
-          <p id="number"></p>
+            <p id="number"></p>
         </div>
         <section class="section slide-1 active">
-          <h1>Procesor</h1>
+            <h1>Procesor</h1>
+            <img width="1000px" height="562px" src="imgs/procesor.jpg">
         </section>
         <section class="section slide-2">
-          <h1>Procesor - Test</h1>
+            <div class="wrapper">
+                <h1>Czym jest procesor?</h1>
+                <img src="imgs/procesor_1.jpg">
+            </div>
+            <div class="wrapper">
+                <p>CPU (Central Processing Unit) - Centralna jednostka obliczeniowa, definiuje się go jako sekwencyjne urządzenie cyfrowe, które pobiera dane z pamięci, odpowiednio interpetuje, a następnie wykonuje zawarte w nich polcenia.<br></p>
+            </div>
         </section>
         <section class="section slide-3">
-          <h1>Hello</h1>
+            <div class="wrapper">
+                <img width="90%" src="imgs/procekpodlupa.jpg">
+            </div>
+            <div class="wrapper">
+                <p style="text-align: center; padding-right: 20px;">Procesory wykonywane są zwykle jako układy scalone
+                        zamknięte w hermetycznej obudowie, często posiadającej złocone wyprowadzenia. Ich sercem jest monokryształ krzemu, na który
+                        naniesiono techniką fotolitografii szereg warstw półprzewodnikowych, tworzących, w
+                        zależności od zastosowania, sieć od kilku tysięcy do kilkuset milionów tranzystorów</p>
+            </div>
         </section>
       </div>
     <script src="script.js"></script>
