Sass, one slide

--- a/index.html
+++ b/index.html
@@ -38,6 +38,30 @@
                         zależności od zastosowania, sieć od kilku tysięcy do kilkuset milionów tranzystorów</p>
             </div>
         </section>
+        <section class="section slide-4">
+            <div class="wrapper">
+                <img src="imgs/schemat procesora.png">
+                <p class="picture-text">Schemat blokowy procesora</p>
+            </div>
+            <div class="wrapper">
+                <ul>
+                    <li>RAM (Random Access Memory) - pamięć operacyjna</li>
+                    <li>BU (Bus Unit) - układ zarządzający magistralami</li>
+                    <li>AU (Addresing Unit) - układ obliczania adresu</li>
+                    <li>MMU (Memory Management Unit) - układ zarządzania pamięcią</li>
+                    <li>IU (Instruction Unit) - dekoder instrukcji</li>
+                    <li>EU (Execution Unit) - moduł wykonawczy, zawiera ALU i FPU</li>
+                    <li>ALU (Aritmetic-Login Unit) - jednostka arytmetyczno-logiczna</li>
+                    <li>FPU (Floating Point Unit) - jednostka zmiennoprzecinkowa</li>
+                </ul>
+                <p>ALU - układ ten jest często nazywany układem wykonawczym procesora, ponieważ
+                    wykonuje on większość rozkazów zlecanych procesorowi. Blok ALU jest układem, który
+                    realizuje różne funkcje w zależności od zaprogramowanej operacji, tj. rozkazu
+                    umieszczonego w programie. Argumentami tych rozkazów są słowa binarne. Rozkazy te
+                    mogą dotyczyć operacji arytmetycznych (dodawanie i odejmowanie) lub logicznych
+                    (sumowanie, mnożenie itp.).</p>
+            </div>
+        </section>
       </div>
     <script src="script.js"></script>
 </body>
