--- a/index.html
+++ b/index.html
@@ -62,6 +62,25 @@
                     (sumowanie, mnożenie itp.).</p>
             </div>
         </section>
+        <section class="section slide-5">
+            <div class="wrapper">
+                <ul>
+                    <li>A - akumulatory - rejestr który zawiera jeden z a</li>
+                    <li>B, C, D, E, H, L - rejestry robocze</li>
+                    <li>F - rejestr flagowy - zawiera dodatkowe cechy wyniku wykonywanej operacji, które potrzebne są do podjęcia decyzji o dalszym sposobie przetwarzania informacji.</li>
+                    <li>IR - rejestr instrukcji</li>
+                    <li>D - Dekoder</li>
+                    <li>EU - jednostka wykonawcza</li>
+                    <li>CU - jednostka sterująca</li>
+                    <li>PC - licznik rozkazów - jest jednym z istnotniejszych rejestrów dzięki któremu procesor potrafi pobierać kolejne rozkazy do wykonania.</li>
+                    <li>SP - wskaźnik stosu - służy do adresowania pamięci.</li>
+                </ul>
+            </div>
+            <div class="wrapper">
+                <img src="imgs/schemat procesora rejestr.png">
+                <p class="picture-text">Schemat blokowy procesora - wykonywanie rozkazków</p>
+            </div>
+        </section>
       </div>
     <script src="script.js"></script>
 </body>
