--- a/index.html
+++ b/index.html
@@ -89,8 +89,20 @@
             <img src="imgs/zegar.gif">
             <p>Kluczem do działania całości i współpracy między tymi elementami jest zegar. Steruje on wszystkimi częściami składowymi procesora, dostarczając do nich sygnał elektryczny o określonej częstotliwości taktowania. Podstawowa, jednostkowa operacja wykonywana jest za każdym razem, kiedy dotrze do nich impuls taktujący. Im wyższa częstotliwość, tym szybciej wykonywane mogą być te operacje. Procesor taktowany zegarem o częstotliwości np. 1 GHz wykonuje miliard operacji na sekundę.</p>
         </section>
+        <section class="section slide-8">
+            <p class="magistrala"><span class="bold">Magistrala</span> - jest zestawem ścieżek łączących jednocześnie kilka komponentów oraz umożliwiającym komunikację między nimi. W zależności od zastosowanej technologii, magistrala może przesyłać informację w sposób równoległy lub szeregowy, a w zależności od zastosowanego sposobu kontroli przepływu danych może być asynchroniczna lub synchroniczna.<br>
+               <br>
+               Magistrale charekteryzujemy poprzed dwa parametry:<br>
+               <span class="bold">Szerokości</span> - która oznacza liczbę jednocześnie wysłanych bitów w jednostce czasu.<br>
+               <span class="bold">Szybkości</span> – która określa, jak szybko dane są przesyłane przez ścieżki magistrali.
+            </p>
+            <ul>
+                <li><span class="bold">Magistrala danych</span> - umożliwia wymianę danych między procesorem a chipsetem.</li>
+                <li><span class="bold">Magistrala adresowa</span> - jest to specjalny zestaw ścieżek służący do adresowania pamięci operacyjnej.</li>
+                <li><span class="bold">Magistrala sterująca</span> - odpowiedzialna za przesyłanie sygnałów sterująych między procesorem a pamięcią RAM i pozostałymi urządzeniami wejścia/wyjścia.</li>
+            </ul>
+        </section>
       </div>
-      <!-- MAGISTRALE -->
     <script src="script.js"></script>
 </body>
 </html>
