Last slides, rwd

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <div class="wrapper">
                 <img src="imgs/schemat procesora rejestr.png">
                 <p class="picture-text">Schemat blokowy procesora - wykonywanie rozkazków</p>
+                <p>Kod maszynowy lub inaczej język maszynowy jest zestawem rozkazów procesora. Program taki zapisany jest w postaci binarnych liczb. Część z nich stanowi rozkazy, część – argumenty. Kod maszynowy generowany jest w dwóch procesach. W przypadku języków programowania wysokiego poziomu jest to kompilacja, natomiast asemblację stosuje się dla języków niskopoziomowych.</p>
             </div>
         </section>
         <section class="section slide-7">
@@ -100,6 +101,16 @@
                 <li><span class="bold">Magistrala danych</span> - umożliwia wymianę danych między procesorem a chipsetem.</li>
                 <li><span class="bold">Magistrala adresowa</span> - jest to specjalny zestaw ścieżek służący do adresowania pamięci operacyjnej.</li>
                 <li><span class="bold">Magistrala sterująca</span> - odpowiedzialna za przesyłanie sygnałów sterująych między procesorem a pamięcią RAM i pozostałymi urządzeniami wejścia/wyjścia.</li>
+            </ul>
+        </section>
+        <section class="section slide-9">
+            <h1>Koniec</h1>
+            <h2>Autor: Daniel Dąbrowski</h2>
+            <p>Źródła:</p>
+            <ul>
+                <li><a href="https://www.mechanikryki.pl/renata/pliki_pdf/procesor.pdf">link-1</a></li>
+                <li><a href="https://lenovozone.pl/blog/poznajmy-technologie-jak-dziala-procesor/">link-2</a></li>
+                <li><a href="http://forum.komputerswiat.pl/topic/18505-procesory-budowa-dzia%C5%82anie-i-nie-tylko/">link-3</a></li>
             </ul>
         </section>
       </div>
