--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="section slide-6">
             <div class="wrapper">
                 <ul>
-                    <li>A - akumulatory - rejestr który zawiera jeden z a</li>
+                    <li>A - akumulatory - rejestr który zawiera jeden z argumentów wykonywanej operacji i do którego ładowany jest wynik wykonywanej operacji</li>
                     <li>B, C, D, E, H, L - rejestry robocze</li>
                     <li>F - rejestr flagowy - zawiera dodatkowe cechy wyniku wykonywanej operacji, które potrzebne są do podjęcia decyzji o dalszym sposobie przetwarzania informacji.</li>
                     <li>IR - rejestr instrukcji- Zawiera kod aktualnie wykonywanej instrukcji</li>
